[package]
name = "remem"
version = "0.1.0"
authors = [
  "Ryan Levick <ryan.levick@gmail.com>",
  "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]
repository = "https://github.com/rylev/remem"
documentation = "https://docs.rs/remem"
description = "Thread-safe object reuse."
keywords = ["mempool", "bytes", "async", "native", "generic"]
categories = ["data-structure", "memory-management", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "./README.md"

[dependencies]
crossbeam-epoch = "0.8.0"
